@@ -32,7 +32,8 @@
 #include <png.h>
 #include "input-png.h"
 
-static volatile char rcsid[]="$Id: input-png.c,v 1.11 2002/05/03 15:25:09 masata-y Exp $";
+static volatile char rcsid[]="$Id: input-png.c,v 1.12 2002/09/28 10:27:28 masata-y Exp $";
+static png_bytep * read_png(png_structp png_ptr, png_infop info_ptr);
 
 /* for pre-1.0.6 versions of libpng */
 #ifndef png_jmpbuf
@@ -90,7 +91,8 @@ static int init_structs(png_structp *png, png_infop *info,
 	    goto cleanup;					\
 	  } } while (0)
 
-static int load_image(at_bitmap_type *image, FILE *stream, at_exception * exp) {
+static int load_image(at_bitmap_type *image, FILE *stream, at_exception * exp) 
+{
 	png_structp png;
 	png_infop info, end_info;
 	png_bytep *rows;
@@ -103,14 +105,8 @@ static int load_image(at_bitmap_type *image, FILE *stream, at_exception * exp) {
 
 	png_init_io(png, stream);
 	CHECK_ERROR();
-
-	png_read_png(png, info, PNG_TRANSFORM_STRIP_16
-	                      | PNG_TRANSFORM_STRIP_ALPHA
-	                      | PNG_TRANSFORM_PACKING
-	                      | PNG_TRANSFORM_EXPAND, NULL);
-	CHECK_ERROR();
-
-	rows = png_get_rows(png, info);
+	
+	rows = read_png(png, info);
 
 	width = (unsigned short)png_get_image_width(png, info);
 	height = (unsigned short)png_get_image_height(png, info);
@@ -148,4 +144,47 @@ at_bitmap_type png_load_image(at_string filename,
 	fclose(stream);
 
 	return image;
+}
+
+static png_bytep *
+read_png(png_structp png_ptr, png_infop info_ptr)
+{
+	int row;
+	png_color_16p original_bg;
+	png_color_16  my_bg;
+
+
+	png_read_info(png_ptr, info_ptr);
+
+	png_set_strip_16(png_ptr);
+	png_set_packing(png_ptr);
+	if ((png_ptr->bit_depth < 8) ||
+	    (png_ptr->color_type == PNG_COLOR_TYPE_PALETTE) ||
+	    (png_get_valid(png_ptr, info_ptr, PNG_INFO_tRNS)))
+		png_set_expand(png_ptr);
+
+	if (png_get_bKGD(png_ptr, info_ptr, &original_bg)) {
+		/* Fill transparent region with black */
+		my_bg.index = 0;
+		my_bg.red = my_bg.green = my_bg.blue = my_bg.gray = 0xFFFF;
+		png_set_background(png_ptr, &my_bg,
+				   PNG_BACKGROUND_GAMMA_FILE, 1, 1.0);
+	} else
+		png_set_strip_alpha(png_ptr);
+	png_read_update_info(png_ptr, info_ptr);
+
+
+	info_ptr->row_pointers = (png_bytepp)png_malloc(png_ptr,
+							info_ptr->height * sizeof(png_bytep));
+#ifdef PNG_FREE_ME_SUPPORTED
+	info_ptr->free_me |= PNG_FREE_ROWS;
+#endif
+	for (row = 0; row < (int)info_ptr->height; row++)
+		info_ptr->row_pointers[row] = (png_bytep)png_malloc(png_ptr,
+								    png_get_rowbytes(png_ptr, info_ptr));
+	
+	png_read_image(png_ptr, info_ptr->row_pointers);
+	info_ptr->valid |= PNG_INFO_IDAT;
+	png_read_end(png_ptr, info_ptr);
+	return png_get_rows(png_ptr, info_ptr);
 }
